--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
         <relativePath/>
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>school</artifactId>
+    <artifactId>school-main-school</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <name>school-main-school</name>
+    <description>school-main-school</description>
 
     <properties>
         <java.version>17</java.version>
